--- a/Wake-on-LAN .Net.csproj
+++ b/Wake-on-LAN .Net.csproj
@@ -63,6 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data.cs" />
+    <Compile Include="AddPcForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPcForm.Designer.cs">
+      <DependentUpon>AddPcForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PcData.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -72,6 +78,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddPcForm.resx">
+      <DependentUpon>AddPcForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
